# nlp-pytorch

./: CHANGELOG.md  README.md  pyproject.toml
src/nlp_pytorch/: cbow.py  deep.py  embedding.py  seq_model.py  surname.py  surname_cnn.py  train.py  transfer_learning.py  utils.py  yelp.py
src/nlp_pytorch/data/: base_dataset.py  vocab.py
